--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -22,6 +22,28 @@
         android:layout_below="@+id/product_name"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:id="@+id/quantity_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Qty"
+        android:textSize="14sp"
+        android:textColor="#757575"
+        android:layout_above="@+id/price"
+        android:layout_toLeftOf="@+id/checkBox"
+        android:layout_toStartOf="@+id/checkBox"
+        android:layout_marginRight="39dp"
+        android:layout_marginEnd="39dp" />
+
+    <Spinner
+        android:id="@+id/quantity_spinner"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:entries="@array/quantity"
+        android:layout_below="@id/quantity_text"
+        android:layout_alignLeft="@+id/quantity_text"
+        android:layout_alignStart="@+id/quantity_text" />
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
