--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -1,15 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:id="@+id/mychecklist"
     android:orientation="vertical"
     android:background="#E6E6E6">
 
+    <View
+        android:id="@+id/viewLine"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="5dp"
+        android:background="#BABABA" />
+
+    <ListView
+        android:id="@+id/list_view_cart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:layout_marginBottom="60dp"
+        >
+    </ListView>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#ED1C24"
+        android:layout_alignTop="@+id/cart_layout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
     <RelativeLayout
         android:id="@+id/cart_layout"
         android:layout_width="fill_parent"
-        android:layout_height="60dp" >
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true">
 
         <TextView
             android:id="@+id/item_text"
@@ -60,19 +85,5 @@
             android:textSize="16dp" />
 
     </RelativeLayout>
-    <View
-        android:id="@+id/viewLine"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="5dp"
-        android:background="#BABABA" />
 
-    <ListView
-        android:id="@+id/list_view_cart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:layout_margin="5dp">
-    </ListView>
-</LinearLayout>
+</RelativeLayout>
