change checkout button and set first activity UI

--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -80,7 +80,7 @@
             android:layout_marginRight="6dp"
             android:layout_marginTop="4dp"
             android:padding="2dp"
-            android:text="Checkout!!"
+            android:text="Buy!! ➤"
             android:typeface="serif"
             android:textSize="16dp" />
 
