add total amount per item (cart activity)

--- a/app/src/main/res/layout/pre_activity_layout.xml
+++ b/app/src/main/res/layout/pre_activity_layout.xml
@@ -29,17 +29,17 @@
             android:layout_alignParentLeft="true"
             android:textColor="@android:color/white"
             android:text="Snacks"
-            android:textSize="18sp"
+            android:textSize="22sp"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/restaurant"
-            android:text="Restaurant"
+            android:text="Restaurants"
             android:layout_alignParentRight="true"
             android:textColor="@android:color/white"
-            android:layout_marginTop="15dp"
-            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:textSize="22sp"
             android:layout_below="@id/snacks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -59,7 +59,7 @@
             android:id="@+id/super_market"
             android:layout_alignParentLeft="true"
             android:text="Supermarket"
-            android:textSize="18sp"
+            android:textSize="22sp"
             android:textColor="@android:color/white"
             android:layout_centerVertical="true"
             android:src="@android:drawable/ic_input_add"
@@ -68,9 +68,9 @@
         <TextView
             android:id="@+id/others"
             android:text="Others"
-            android:textSize="18sp"
+            android:textSize="22sp"
             android:textColor="@android:color/white"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:layout_alignParentRight="true"
             android:textAppearance="?android:attr/textAppearanceButton"
             android:layout_below="@id/super_market"
