--- a/app/src/main/res/layout/single_cart_item.xml
+++ b/app/src/main/res/layout/single_cart_item.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:layout_margin="5dp"
+    android:padding="2dp"
+    >
 
     <ImageButton
         android:id="@+id/delete"
@@ -21,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="5dp"
+        android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/delete"
         android:textSize="20sp" />
