--- a/app/src/main/res/layout/pre_activity_layout.xml
+++ b/app/src/main/res/layout/pre_activity_layout.xml
@@ -5,8 +5,8 @@
     android:background="#FFFFFF" >
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="100dp"
+        android:layout_width="160dp"
+        android:layout_height="120dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/background_design"
         android:id="@+id/imageView"
@@ -17,7 +17,7 @@
         android:clickable="true"
         android:id="@+id/snack_custom_button"
         android:background="@drawable/button_theme"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:layout_centerVertical="true"
@@ -27,20 +27,21 @@
         android:layout_alignStart="@+id/custom_super_market_button">
         <TextView
             android:id="@+id/snacks"
-            android:layout_alignParentLeft="true"
             android:textColor="@android:color/white"
             android:text="Snacks"
-            android:textSize="24sp"
-            android:layout_centerVertical="true"
+            android:textSize="25sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
         <TextView
             android:id="@+id/restaurant"
             android:text="Restaurants"
             android:layout_alignParentRight="true"
             android:textColor="@android:color/white"
             android:layout_marginTop="15dp"
-            android:textSize="24sp"
+            android:textSize="25sp"
             android:layout_below="@id/snacks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -50,7 +51,7 @@
         android:clickable="true"
         android:id="@+id/custom_super_market_button"
         android:background="@drawable/button_theme"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginTop="20dp"
@@ -59,18 +60,18 @@
         android:layout_centerHorizontal="true">
         <TextView
             android:id="@+id/super_market"
-            android:layout_alignParentLeft="true"
             android:text="Supermarket"
-            android:textSize="24sp"
+            android:textSize="25sp"
             android:textColor="@android:color/white"
-            android:layout_centerVertical="true"
-            android:src="@android:drawable/ic_input_add"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
         <TextView
             android:id="@+id/others"
             android:text="Others"
-            android:textSize="24sp"
+            android:textSize="25sp"
             android:textColor="@android:color/white"
             android:layout_marginTop="20dp"
             android:layout_alignParentRight="true"
@@ -81,10 +82,11 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="220dp"
-        android:layout_height="170dp"
+        android:layout_width="250dp"
+        android:layout_height="180dp"
         android:background="@drawable/bike"
         android:id="@+id/imageView2"
+        android:layout_alignLeft="@+id/imageView"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
