--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:layout_alignParentBottom="true"
             android:layout_alignLeft="@+id/item_text"
             android:layout_alignStart="@+id/item_text" />
@@ -81,7 +81,7 @@
             android:layout_marginRight="6dp"
             android:layout_marginTop="4dp"
             android:padding="2dp"
-            android:text="Buy!! ➤"
+            android:text="confirm ➤"
             android:typeface="serif"
             android:textSize="16sp" />
     </RelativeLayout>
