--- a/app/src/main/res/layout/order_activity.xml
+++ b/app/src/main/res/layout/order_activity.xml
@@ -115,6 +115,7 @@
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:background="@drawable/bike"
+        android:layout_alignLeft="@+id/imageViewBackground"
         android:id="@+id/imageViewBike"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
