--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -27,6 +27,7 @@
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:background="@drawable/bike"
+        android:layout_alignLeft="@+id/imageView"
         android:id="@+id/imageView2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
