--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -112,7 +113,5 @@
         android:background="@drawable/bike"
         android:id="@+id/imageView2"
         android:layout_alignLeft="@+id/imageView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/mobile_editText"
-        android:layout_alignEnd="@+id/mobile_editText" />
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
