--- a/app/src/main/res/layout/pre_activity_layout.xml
+++ b/app/src/main/res/layout/pre_activity_layout.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF" >
 
     <ImageView
-        android:layout_width="160dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="3dp"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
         android:background="@drawable/background_design"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
@@ -82,12 +82,14 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="250dp"
-        android:layout_height="180dp"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         android:background="@drawable/bike"
         android:id="@+id/imageView2"
-        android:layout_below="@+id/custom_super_market_button"
-        android:layout_alignLeft="@+id/imageView"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/custom_super_market_button"
+        android:layout_alignRight="@+id/custom_super_market_button"
+        android:layout_alignEnd="@+id/custom_super_market_button"
+        android:layout_alignLeft="@+id/imageView"
+        android:layout_alignStart="@+id/imageView" />
 </RelativeLayout>
