--- a/app/src/main/res/layout/pre_activity_layout.xml
+++ b/app/src/main/res/layout/pre_activity_layout.xml
@@ -85,6 +85,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bike"
+        android:minWidth="120dp"
+        android:minHeight="96dp"
+        android:maxWidth="300dp"
+        android:maxHeight="360dp"
         android:id="@+id/imageView2"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/custom_super_market_button"
