--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -8,7 +8,6 @@
         android:id="@+id/product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
         android:textSize="17sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -84,6 +83,7 @@
         <RadioButton
             android:id="@+id/one_person"
             android:text="1PR"
+            android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <RadioButton
