--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:background="#545454"
+    >
 
     <TextView
         android:id="@+id/product_name"
@@ -11,7 +13,7 @@
         android:textSize="17sp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingLeft="2dp" />
 
     <TextView
         android:id="@+id/description"
@@ -21,7 +23,7 @@
         android:layout_marginRight="70dp"
         android:text=" "
         android:layout_below="@+id/product_name"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
+        android:paddingLeft="2dp" />
 
     <EditText
         android:id="@+id/with_out"
