--- a/app/src/main/res/layout/activity_products_detail.xml
+++ b/app/src/main/res/layout/activity_products_detail.xml
@@ -12,6 +12,7 @@
         android:layout_marginBottom="30dp" />
 
     <View
+        android:id="@+id/separator_view"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_gravity="center"
@@ -21,6 +22,7 @@
         android:layout_alignParentStart="true" />
 
     <RelativeLayout
+        android:id="@+id/note_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
