--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17sp"
-        android:paddingTop="5dp"
+        android:paddingTop="10dp"
+        android:layout_margin="2dp"
         android:paddingBottom="5dp"
         android:paddingLeft="2dp" />
 
@@ -42,7 +43,7 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="pirce"
+        android:layout_margin="2dp"
         android:textSize="16sp"
         android:textStyle="italic"
         android:layout_marginTop="5dp"
@@ -80,6 +81,7 @@
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_margin="2dp"
         android:orientation="horizontal"
         android:visibility="invisible"
         android:id="@+id/radio_group"
