--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="17sp"
+        android:focusable="false"
         android:paddingTop="10dp"
         android:layout_margin="2dp"
         android:paddingBottom="5dp"
@@ -30,6 +31,8 @@
         android:id="@+id/with_out"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
         android:background="@android:drawable/edit_text"
         android:textColorHint="@color/gray"
         android:hint="without"
