--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -15,20 +15,13 @@
 
     <GridView
         android:numColumns="auto_fit"
-        android:gravity="left"
+        android:layout_margin="20dp"
+        android:gravity="center"
         android:layout_below="@+id/imageView"
-        android:columnWidth="100dp"
+        android:columnWidth="150dp"
         android:stretchMode="columnWidth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/grid" />
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:background="@drawable/bike"
-        android:layout_alignLeft="@+id/imageView"
-        android:id="@+id/imageView2"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
 </RelativeLayout>
