--- a/app/src/main/res/layout/single_grid.xml
+++ b/app/src/main/res/layout/single_grid.xml
@@ -5,6 +5,7 @@
     <ImageView
         android:id="@+id/grid_image"
         android:padding="0dp"
+        android:layout_margin="5dp"
         android:layout_width="120dp"
         android:layout_height="90dp">
     </ImageView>
